	* libmobius_core: Added new method decoder::sgml::parser::get_minidom
	* libmobius_core: Added new method database::new_select_statement (table_name, cols names)
	* libmobius_core: Changed to load C++ extensions directly from data/extensions folder
	* libmobius_framework: Changed function ant_impl_vfs_processor::run to create a new transaction
	* libmobius_python: Added new function decoder::hexstring
	* libmobius_python: Added new method decoder.sgml.parser.get_last
	* pymobius.registry.user_accounts: Fixed error in TS_Property constructor
	* pymobius.app.skype.skype: Removed module
	* pymobius.ant.turing.test_case_passwords: Convert all passwords to string before testing
	* pymobius.ant.turing.registry_passwords: Convert PSSP passwords to string before testing
	* pymobius.ant.turing.dpapi_user_mk: Retrieve Users DPAPI keys from WinXP folders
	* pymobius.application: Removed installation of C++ extensions

Mobius Forensic Toolkit 2.22
	* app-ares: Improved evidence tags
	* app-ares: Changed to save remote-party-shared-file evidences
	* app-chromium: Improved evidence tags
	* app-emule: Improved evidence tags
	* app-emule: Changed to save remote-party-shared-file evidences
	* app-emule: Added new class vfs_processor_impl
	* app-emule: Added new class profile
	* app-emule: Added support for aMule
	* app-emule: Removed evidence_loader_impl class
	* app-emuletorrent: Improved evidence tags
	* app-emuletorrent: Changed to save remote-party-shared-file evidences
	* app-emuletorrent: Added new class vfs_processor_impl
	* app-emuletorrent: Added new class profile
	* app-emuletorrent: Removed evidence_loader_impl class
	* app-shareaza: Improved evidence tags
	* app-shareaza: Changed to save remote-party-shared-file evidences
	* app-shareaza: Added new class vfs_processor_impl
	* app-shareaza: Added new class profile
	* app-shareaza: Removed evidence_loader_impl class
	* app-utorrent: Added support for uTorrent Web
	* app-utorrent: Improved evidence tags